[package]
name = "exewho2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.3"

[dependencies]
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }
clap = "4.4.7"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"
enigo = "0.0.14"
walkdir = "2.2.9" 
rust-crypto = "^0.2"
memexec = "0.2"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_System_Memory", 
    "Win32_System_LibraryLoader",
    "Win32_Foundation"
]
